[tool.poetry]
name = "elec-script"
version = "0.1.0"
description = ""
authors = ["Alessandro Cuppari <alessandro.cuppari@broadridge.com>"]
readme = "README.md"
packages = [{include = "elec_script"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"
prettytable = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
